# Bili_copilot

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  project_record.md  scope.md
src/bili_copilot/: __init__.py  bilibili_client.py  cli.py  cookie_config.py  exporter.py  models.py  normalizer.py  pipeline.py  subtitle_fetcher.py  subtitle_selector.py  url_parser.py  utils.py
tests/: test_bilibili_client.py  test_cli.py  test_cookie_config.py  test_exporter.py  test_models.py  test_normalizer.py  test_pipeline.py  test_placeholder.py  test_subtitle_fetcher.py  test_subtitle_selector.py  test_url_parser.py
